objects/Account_Region_Head_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US Sales</fullName>
                </value>
                <value>
                    <fullName>International Sales</fullName>
                </value>
                <value>
                    <fullName>A&amp;D Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FAE_Head__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FAE Head</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FAE_Head</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region_Head_Backup_LK__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region Head Backup</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Region_Head_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region_Head_LK__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region Head</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Region_Head_Mapping1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_SVP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales SVP</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Region_Head_Mapping2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Territory__c</fullName>
        <label>Territory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US-East</fullName>
                </value>
                <value>
                    <fullName>US West1</fullName>
                </value>
                <value>
                    <fullName>EMEA-ROA</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Japan Korea</fullName>
                </value>
                <value>
                    <fullName>US SoCal1</fullName>
                </value>
                <value>
                    <fullName>US NW</fullName>
                </value>
                <value>
                    <fullName>US SoCal2</fullName>
                </value>
                <value>
                    <fullName>US Central1</fullName>
                </value>
                <value>
                    <fullName>A&amp;D</fullName>
                </value>
                <value>
                    <fullName>US Central2</fullName>
                </value>
                <value>
                    <fullName>US SW</fullName>
                </value>
                <value>
                    <fullName>US SoCal3</fullName>
                </value>
                <value>
                    <fullName>US NorCal</fullName>
                </value>
                <value>
                    <fullName>US NE1</fullName>
                </value>
                <value>
                    <fullName>US NE2</fullName>
                </value>
                <value>
                    <fullName>US SE</fullName>
                </value>
                <value>
                    <fullName>US West2</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>US NE3</fullName>
                </value>
                <value>
                    <fullName>ASIC-NA</fullName>
                </value>
                <value>
                    <fullName>ASIC-AP</fullName>
                </value>
                <value>
                    <fullName>ASIC-EMEA</fullName>
                </value>
                <value>
                    <fullName>ASIC-JP</fullName>
                </value>
                <value>
                    <fullName>Taiwan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategic_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Strategic Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Region Head Mapping</relationshipLabel>
        <relationshipName>Account_Region_Head_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory_Approver_LK__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Region_Head_Mapping3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Account Region Head Mapping</label>
    <listViews>
        <fullName>All_RHM</fullName>
        <columns>NAME</columns>
        <columns>Sales_Territory__c</columns>
        <columns>Region_Head_LK__c</columns>
        <columns>Region_Head_Backup_LK__c</columns>
        <columns>Territory_Approver_LK__c</columns>
        <columns>Sales_SVP__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>isActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All_RHM</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <roleAndSubordinatesInternal>GLOBALFOUNDRIES_Corporate</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_RHM_AP</fullName>
        <columns>NAME</columns>
        <columns>Sales_Territory__c</columns>
        <columns>Region_Head_LK__c</columns>
        <columns>Region_Head_Backup_LK__c</columns>
        <columns>Territory_Approver_LK__c</columns>
        <columns>Sales_SVP__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>isActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_SVP__c</field>
            <operation>contains</operation>
            <value>Augie</value>
        </filters>
        <label>All_RHM_AP</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <roleAndSubordinatesInternal>GLOBALFOUNDRIES_Corporate</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Territory_Head</fullName>
        <columns>NAME</columns>
        <columns>Strategic_Account__c</columns>
        <columns>Sales_Territory__c</columns>
        <columns>Region_Head_LK__c</columns>
        <columns>Sales_SVP__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>isActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>Territory Head</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>GLOBALFOUNDRIES_Corporate</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>RHM-{00}</displayFormat>
        <label>Region Head Mapping</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Region Head Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Territory_or_Strategic_Account_required</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
  AND(ISPICKVAL(Sales_Territory__c, &apos;&apos;),
      Strategic_Account__c = null
  )
  ,
  AND( NOT(ISPICKVAL(Sales_Territory__c, &apos;&apos;)),
   Strategic_Account__c != null
  )
)</errorConditionFormula>
        <errorMessage>Either Territory or Strategic Account is required.</errorMessage>
    </validationRules>
</CustomObject>